# graphtik

./: .gitignore  .travis.yml  CHANGES.rst  MANIFEST.in  README.md  README.rst  codecov.yml  pyproject.toml  requirements-rtd.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yaml  pypi-upload.yaml
docs/: GraphtikFlowchart.dot  GraphtikModuleDependencies.dot
docs/source/: GraphtikModuleDependencies.dot  arch.rst  changes.rst  composition.rst  conf.py  docutils.conf  index.rst  operations.rst  pipelines.rst  plotting.rst  reference.rst  spelling_wordlist.txt
docs/source/_static/: enactSvgPanZoom.js  s5defs.css
graphkit/: network.py
graphtik/: __init__.py  autograph.py  base.py  composition.py  config.py  execution.py  fnop.py  functional.py  jetsam.py  jsonpointer.py  modifier.py  modifiers.py  netop.py  network.py  nodes.py  op.py  operations.py  pipeline.py  planning.py  plot.py
graphtik/sphinxext/: __init__.py  _graphtikbuilder.py  doctestglobs.py  graphtik.css
test/: conftest.py  helpers.py  test_base.py  test_combine.py  test_doc.py  test_execution.py  test_functional.py  test_graphtik.py  test_hierarchical.py  test_jsonpointer.py  test_modifier.py  test_modifiers.py  test_network.py  test_nodes.py  test_op.py  test_planning.py  test_plot.py  test_remerge.py  test_sideffects.py  test_site.py
test/sphinxext/: conftest.py  test_directive.py  test_graphtik_directive.py  test_image_purgatory.py
test/sphinxext/roots/test-graphtik-directive/: conf.py  index.rst
