## Python's setup.cfg for tool defaults:
#
[metadata]
## Include CHANGES in wheel
# `license_files` it affects only "wheels" (not "sdists"), and defaults to ~5 files,
# see https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
#license_files = CHANGES.rst LICENSE

[bdist_wheel]
universal = 1


[tool:pytest]
# See http://doc.pytest.org/en/latest/mark.html#mark
markers =
    slow: slow-running tests, run them: with: -m slow OR -m 'slow and not slow'

addopts =
    --log-level=DEBUG
    --doctest-modules
    # Faciltate developer, rum'em all with -m 'slow or not slow'.
    -m 'not slow'
    # See https://stackoverflow.com/questions/42919871/avoid-no-commands-on-setup-py-with-py-test
    --ignore=setup.py
    # Version-from-sources trick fails due to different cwd.
    --ignore=docs/source/conf.py
    --doctest-report ndiff
    --doctest-continue-on-failure
    # --doctest-ignore-import-errors
    --doctest-glob=*.md
    --doctest-glob=*.rst
    --cov-fail-under=80
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
